# SkinGUI_Builder

./: AddingAudio.cpp  AddingAudio.h  AddingAudio.ui  AddingImage.cpp  AddingImage.h  AddingImage.ui  CMakeLists.txt  ComboBoxDelegate.cpp  ComboBoxDelegate.h  Converter.cpp  Font.cpp  Image.cpp  ImageSpinBox.cpp  ImageSpinBox.h  README.md  Simulator.cpp  SkinAssembler.pro  SkinAssembler.pro.user.5236af4  SkinOpen.cpp  SkinOpen.h  SkinRessource.qrc  SkinSave.cpp  SkinSave.h  SpinBoxDelegate.cpp  SpinBoxDelegate.h  Utility.cpp  Utility.h  audio.cpp  compression.cpp  compression.h  editdefine.ui  file.cpp  lzw.cpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  option.cpp  progress.cpp  progress.h  (+13 more)
Ressource/: check-marks_23-2147502799.pdn  down.pdn
